// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > should not show label 1`] = `
<div
  class="ds-flex ds-flex-row"
>
  <select
    aria-label="Label"
    class="hover:ds-bg-purple-100 focus:ds-ring-purple-500 disabled:ds-border-gray-500 disabled:ds-bg-gray-200 disabled:ds-text-gray-500 disabled:hover:ds-bg-gray-200 ds-border-jod-dark ds-bg-jod-white ds-min-w-[120px] ds-justify-self-end ds-rounded-lg ds-border ds-p-2 focus:ds-outline-none focus:ds-ring"
  >
    <option
      value="fi"
    >
      Suomi
    </option>
    <option
      value="sv"
    >
      Svenska
    </option>
    <option
      value="en"
    >
      English
    </option>
  </select>
</div>
`;

exports[`Snapshot testing > should render as disabled 1`] = `
<div
  class="ds-flex ds-flex-row"
>
  <label
    class="ds-text-jod-black ds-mr-2 ds-self-center ds-font-bold"
    for=":r2:"
  >
    Label
  </label>
  <select
    class="hover:ds-bg-purple-100 focus:ds-ring-purple-500 disabled:ds-border-gray-500 disabled:ds-bg-gray-200 disabled:ds-text-gray-500 disabled:hover:ds-bg-gray-200 ds-border-jod-dark ds-bg-jod-white ds-min-w-[120px] ds-justify-self-end ds-rounded-lg ds-border ds-p-2 focus:ds-outline-none focus:ds-ring"
    disabled=""
    id=":r2:"
  >
    <option
      value="fi"
    >
      Suomi
    </option>
    <option
      value="sv"
    >
      Svenska
    </option>
    <option
      value="en"
    >
      English
    </option>
  </select>
</div>
`;

exports[`Snapshot testing > should render with defaults 1`] = `
<div
  class="ds-flex ds-flex-row"
>
  <label
    class="ds-text-jod-black ds-mr-2 ds-self-center ds-font-bold"
    for=":r0:"
  >
    Label
  </label>
  <select
    class="hover:ds-bg-purple-100 focus:ds-ring-purple-500 disabled:ds-border-gray-500 disabled:ds-bg-gray-200 disabled:ds-text-gray-500 disabled:hover:ds-bg-gray-200 ds-border-jod-dark ds-bg-jod-white ds-min-w-[120px] ds-justify-self-end ds-rounded-lg ds-border ds-p-2 focus:ds-outline-none focus:ds-ring"
    id=":r0:"
  >
    <option
      value="fi"
    >
      Suomi
    </option>
    <option
      value="sv"
    >
      Svenska
    </option>
    <option
      value="en"
    >
      English
    </option>
  </select>
</div>
`;
